[package]
name = "aws_archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = { version = "1.0.3", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.5.0"
byte-unit = { version = "5.0.3", features = ["u128"] }
clap = { version = "4.4.11", features = ["derive"] }
futures = "0.3.29"
tokio = { version = "1", features = ["full"] }
